objects/TracRTC__Flow_Step__c.object
<CustomObject>
    <fields>
        <fullName>TracRTC__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracRTC__Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flow</label>
        <referenceTo>TracRTC__Flow__c</referenceTo>
        <relationshipLabel>Flow Steps</relationshipLabel>
        <relationshipName>Flow_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Order__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Order</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TracRTC__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Flow Step</label>
    <nameField>
        <label>Flow Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow Steps</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>